# RuView

./: CHANGELOG.md
.github/workflows/: ci.yml
v2/crates/homecore-assist/: Cargo.toml
v2/crates/homecore-assist/src/: embedding.rs  semantic_recognizer.rs
v2/crates/wifi-densepose-bfld/src/: lib.rs
v2/crates/wifi-densepose-signal/src/ruvsense/: mod.rs  multistatic.rs
